ruka-lang.org/src/lib/interpreter/fixtures/type-err/variant-payload-not-ignored.ruka
// expect: has a payload; use 'wrap(_)' to ignore it
let Box = variant { wrap: int, empty }

let main = () do
	let b: Box = wrap(5)
	match b with
		wrap  do "boxed"
		empty do "empty"
	end
end
